--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,27 @@ a:hover {
     color: white;
     background-color: rgba(0, 0, 0, 0.1);
 }
+
+#hero {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 5%;
+    padding-top: 15%;
+}
+
+#hero img {
+    width:50px;
+    height:auto; /* keep aspect ratio */
+}
+
+#intro {
+    font-size: 1.5rem;
+    padding-bottom: 15%;
+}
+
+h1 {
+    margin: 0;
+    font-size: 7rem;
+    color: #35c997;
+}
